tests-integration/fixtures/checking/1772866200_derive_newtype_class_not_local/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms

Types

Derived
derive forall (t0 :: Type). Newtype @Type Wrapper (t0 :: Type)

Diagnostics
error[NonLocalNewtype]: Expected a local newtype, got: Wrapper
  --> 6:1..6:34
  |
6 | derive instance Newtype Wrapper _
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
